created many to many for room and user,  styling

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,3 +7,13 @@
   <strong>Text:</strong>
   <%= @booking.text %>
 </p>
+
+<p>
+  <strong>Date:</strong>
+  <%= @booking.text %>
+</p>
+
+<p>
+  <strong>Text:</strong>
+  <%= @booking.text %>
+</p>
