--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,1 +1,13 @@
-<p>Test</p>
+<h1>Book a room today!</h2>
+<%= link_to 'My Booking system', controller: 'bookings' %>
+
+
+<div class="center jumbotron">
+  <h1>Welcome to the BookARoom App</h1>
+
+  <h2>
+   Find a room hassle free.
+  </h2>
+
+  <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
+</div>
