--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,19 +1,11 @@
-<p>
-  <strong>Title:</strong>
-  <%= @booking.title %>
-</p>
- 
-<p>
-  <strong>Text:</strong>
-  <%= @booking.text %>
-</p>
 
 <p>
   <strong>Date:</strong>
-  <%= @booking.text %>
+  <%= @booking.date %>
 </p>
 
 <p>
-  <strong>Text:</strong>
-  <%= @booking.text %>
+  <strong>Room:</strong>
+  <%= @booking.room_id %>
 </p>
+
