arrange booking page to add more info

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,11 +1,26 @@
 
 <p>
+<strong>Booking code:</strong>
+<%= @booking.booking_code %>
+</p>
+
+<p>
   <strong>Date:</strong>
   <%= @booking.date %>
 </p>
 
 <p>
-  <strong>Room:</strong>
-  <%= @booking.room_id %>
+  <strong>Room title:</strong>
+  <%= @room.title %>
+</p>
+
+<p>
+  <strong>Room address:</strong>
+  <%= @room.address %>
+</p>
+
+<p>
+  <strong>Room image:</strong>
+  <%= @room.image %>
 </p>
 
