--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,17 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-<%= link_to "sample app", '#', id: "logo" %>
+<%= link_to "booking app", '/homepage/index', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   '/homepage/index' %></li>
             <% if logged_in? %>
-            <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to 'My Bookings', controller: 'bookings' %></li>
+            <li><%= link_to "Rooms", controller: 'rooms' %></li>
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: :delete %>
@@ -20,6 +20,7 @@
           </li>
           <% else %>
             <li><%= link_to "Log in", login_path %></li>
+            <li><%= link_to "Sign up now!", '/signup'%></li>
           <% end %>
         </ul>
       </nav>
