--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.booking-index {
+    padding-top: 60px;
+
+    .ui.header{
+        font-family: monospace;
+    }
+
+    .ui.collapsing.table{
+        width: -webkit-fill-available;
+    }
+}
